--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,3 +22,39 @@ jobs:
 
     - name: List files
       run: ls -la
+
+name: Docker CI
+
+on:
+  push:
+    branches: [ main, develop ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  docker-build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Build Docker image
+      run: docker build -t team-flags:${{ github.sha }} .
+
+    - name: List Docker images
+      run: docker images
+
+    - name: Test Docker image runs
+      run: |
+        docker run -d --name test-container my-app:${{ github.sha }}
+        sleep 5
+        docker ps
+        docker logs test-container
+        docker stop test-container
+
+- name: Health check
+  run: |
+    docker run -d -p 8080:8080 --name app my-app:${{ github.sha }}
+    sleep 10
+    curl -f http://localhost:8080/health || exit 1
