--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,28 +1,3 @@
-name: CI Pipeline
-
-on:
-  push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main ]
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Say hello
-      run: echo "Hello from CI/CD!"
-
-    - name: Show current directory
-      run: pwd
-
-    - name: List files
-      run: ls -la
-
 name: Docker CI
 
 on:
@@ -47,14 +22,14 @@ jobs:
 
     - name: Test Docker image runs
       run: |
-        docker run -d --name test-container my-app:${{ github.sha }}
+        docker run -d --name test-container team-flags:${{ github.sha }}
         sleep 5
         docker ps
         docker logs test-container
         docker stop test-container
 
-- name: Health check
-  run: |
-    docker run -d -p 8080:8080 --name app team-flags:${{ github.sha }}
-    sleep 10
-    curl -f http://localhost:8080/health || exit 1
+    - name: Health check
+      run: |
+        docker run -d -p 8080:8080 --name app team-flags:${{ github.sha }}
+        sleep 10
+        curl -f http://localhost:8080/health || exit 1
