--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,4 @@ jobs:
       run: |
         docker run -d -p 3000:3000 --name app team-flags:${{ github.sha }}
         sleep 10
-        curl -f http://localhost:3000/health || exit 1
+        curl -f http://localhost:3000/api/health || exit 1
