--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,3 +33,16 @@ jobs:
         docker run -d -p 3000:3000 --name app team-flags:${{ github.sha }}
         sleep 10
         curl -f http://localhost:3000/api/health || exit 1
+
+jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Lint code (non-blocking)
+        run: npm run lint || true
